feat: add public GET /users/:username profile
